--- a/package.json
+++ b/package.json
@@ -1,57 +1,60 @@
 {
-  "name": "sudoku-generator",
-  "version": "0.9.0",
-  "description": "app that generates pdfs with lots of sudoku games.",
-  "main": "src/main.js",
-  "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
-  },
-  "repository": "https://github.com/rfciulei/sudoku-generator-electronjs.git",
-  "keywords": [
-    "electron",
-    "sudoku"
-  ],
-  "author": "rfciulei",
-  "license": "mit",
-  "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.54",
-    "@electron-forge/maker-deb": "^6.0.0-beta.54",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.54",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
-    "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "^22.0.0"
-  },
-  "dependencies": {
-    "electron-squirrel-startup": "^1.0.0",
-    "svg-to-pdfkit": "^0.1.8"
-  },
-  "config": {
-    "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "electron_quick_start"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
+    "name": "sudoku-generator",
+    "version": "0.9.0",
+    "description": "app that generates pdfs with lots of sudoku games.",
+    "main": "src/main.js",
+    "scripts": {
+        "start": "electron-forge start",
+        "package": "electron-forge package",
+        "make": "electron-forge make"
+    },
+    "repository": "https://github.com/rfciulei/sudoku-generator-electronjs.git",
+    "keywords": [
+        "electron",
+        "sudoku"
+    ],
+    "author": "rfciulei",
+    "license": "mit",
+    "devDependencies": {
+        "@electron-forge/cli": "^6.0.0-beta.54",
+        "@electron-forge/maker-deb": "^6.0.0-beta.54",
+        "@electron-forge/maker-rpm": "^6.0.0-beta.54",
+        "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
+        "@electron-forge/maker-zip": "^6.0.0-beta.54",
+        "electron": "^22.0.0"
+    },
+    "dependencies": {
+        "electron-squirrel-startup": "^1.0.0",
+        "svg-to-pdfkit": "^0.1.8",
+        "bindings": "~1.2.1",
+        "node-addon-api": "^1.0.0"
+    },
+    "config": {
+        "forge": {
+            "packagerConfig": {},
+            "makers": [
+                {
+                    "name": "@electron-forge/maker-squirrel",
+                    "config": {
+                        "name": "electron_quick_start"
+                    }
+                },
+                {
+                    "name": "@electron-forge/maker-zip",
+                    "platforms": [
+                        "darwin"
+                    ]
+                },
+                {
+                    "name": "@electron-forge/maker-deb",
+                    "config": {}
+                },
+                {
+                    "name": "@electron-forge/maker-rpm",
+                    "config": {}
+                }
+            ]
         }
-      ]
-    }
-  }
+    },
+    "gypfile": true
 }
