--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
         "@electron-forge/maker-rpm": "^6.0.0-beta.54",
         "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
         "@electron-forge/maker-zip": "^6.0.0-beta.54",
-        "electron": "^22.0.0"
+        "electron": "^22.0.0",
+        "electron-rebuild": "^3.2.9"
     },
     "dependencies": {
-        "electron-squirrel-startup": "^1.0.0",
-        "svg-to-pdfkit": "^0.1.8",
         "bindings": "~1.2.1",
-        "node-addon-api": "^1.0.0"
+        "electron-squirrel-startup": "^1.0.0",
+        "node-addon-api": "^1.0.0",
+        "start": "^5.1.0",
+        "svg-to-pdfkit": "^0.1.8"
     },
     "config": {
         "forge": {
